--- a/assignments/assignment 2/.gitignore
+++ b/assignments/assignment 2/.gitignore
@@ -23,3 +23,4 @@ borg_calendar-1.9.04/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.metadata/
